Prevent jumping content on showing add/edit link images on mouseover by setting position of .hoveractor to relative and position of hoverreactor to absolute top right.

--- a/system/includes/churchtools.css
+++ b/system/includes/churchtools.css
@@ -2,8 +2,14 @@
   margin-bottom: 13px;
 }
 
+.hoveractor {
+	position: relative;
+}
 .hoverreactor {
   display:none;
+  position:absolute;
+  top:5px;
+  right:5px;
 }
 
 small {
@@ -165,7 +171,7 @@ div.fixed {
 .grouping {
   background-color:#e7eef4 !important;
   font-style:italic;
-}		
+}
 
 @media print {
    .grouping {
@@ -177,7 +183,7 @@ div.fixed {
 	}
 	th {
       background-color: #e7eef4 !important;
-	}		
+	}
 	td {
 	  line-height: 100% !important;
 	}
